sovereigntyai-temp/services/backend/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: sovereignty-ai-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: image-registry.openshift-image-registry.svc:5000/sovereignty-ai-dev/backend:latest
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "64Gi"
              cpu: "4"
            requests:
              memory: "4Gi"
              cpu: "4"
          volumeMounts:
            - mountPath: /backend_data
              name: persistent-volume
              subPath: data/backend_data
            - mountPath: /shared_data
              name: persistent-volume
              subPath: data/shared_data
      restartPolicy: Always
      volumes:
      - name: persistent-volume
        persistentVolumeClaim:
          claimName: persistent-volume-claim
  strategy:
    type: Recreate
