sovereigntyai-temp/services/backend/k8s/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-route
  namespace: sovereignty-ai-dev
spec:
  to:
    kind: Service
    name: backend-service
  port:
    targetPort: 8000
  wildcardPolicy: None
